# pysndfile

./: ChangeLog  INSTALL.txt  LONG_DESCR  LONG_DESCR.txt  MANIFEST.in  Makefile  README.md  README.md.cksum  README.txt  _pysndfile.pyx  _pysndfile_precythonized.cpp  dist.sh  pyproject.toml  pysndfile.hh  pysndfile_test.py  requirements.txt  setup.cfg  setup.cfg.dist  setup.py  sndfile.hh  sndfile_linux.pxi  sndfile_win32.pxi
doc/: Makefile  prepare_doc.sh  requirements.txt
doc/source/: Changes.rst  GeneralInfo.rst  LONG_DESCR.rst  conf.py  index.rst  modules.rst  pysndfile-package.rst  pysndfile.rst
pysndfile/: Faiff.py  __init__.py  sndio.py
tests/: pysndfile_test.py
